# ReVir-UFPe

nsis-ka/: .project  Makefile  Makefile.am  Makefile.in  Makefile.inc  Makefile.svn  NSIS-KA-RELEASE  README  config.status  configure  configure.ac
nsis-ka/etc/: nsis-ka.conf
nsis-ka/natfw-nslp/: Doxygen.conf  Makefile  Makefile.gmake  Makefile.in  config.status  configure  configure.ac  flush  intercept  natfw_iptables  start-nslpd
nsis-ka/natfw-nslp/eval/: Makefile  benchmark.cpp  benchmark.h  deserializer.cpp  dump_gnuplot.py  eval_journal.py  eval_table.py  evaluate.py  gist_analyze.py  nf.cpp  nf2.cpp  nf3.cpp  nf4.cpp  ni.cpp  nr.cpp  serializer.cpp  utils.cpp  utils.h
nsis-ka/natfw-nslp/include/: benchmark_journal.h  dispatcher.h  events.h  gistka_mapper.h  nat_manager.h  natfw_config.h  natfw_daemon.h  natfw_timers.h  nf_edge_ext_session.h  nf_non_edge_ext_session.h  nf_session.h  ni_session.h  nr_ext_session.h  nr_session.h  policy_rule.h  policy_rule_installer.h  session.h  session_id.h  session_manager.h
nsis-ka/natfw-nslp/src/: Makefile  Makefile.am  Makefile.gmake  Makefile.in  benchmark_journal.cpp  dispatcher.cpp  gistka_mapper.cpp  iptables_policy_rule_installer.cpp  main.cpp  nat_manager.cpp  natfw_config.cpp  natfw_daemon.cpp  natfw_timers.cpp  nf_edge_ext_session.cpp  nf_non_edge_ext_session.cpp  nf_session.cpp  ni_session.cpp  nr_ext_session.cpp  nr_session.cpp  policy_rule.cpp  policy_rule_installer.cpp  session.cpp  session_id.cpp  session_manager.cpp  test_client.cpp  test_stress.cpp  test_stress2.cpp
nsis-ka/natfw-nslp/test/: Makefile  Makefile.am  Makefile.gmake  Makefile.in  README  basic.cpp  benchmark.cpp  data_terminal_info.cpp  dispatcher.cpp  external_address.cpp  generic_object_test.cpp  generic_object_test.h  icmp_types.cpp  information_code.cpp  nat_manager.cpp  natfw_create.cpp  natfw_ext.cpp  natfw_msg.cpp  natfw_response.cpp  nf_edge_ext_session.cpp  nf_non_edge_ext_session.cpp  nf_session.cpp  ni_session.cpp  nr_ext_session.cpp  nr_session.cpp  ntlp_integration.cpp  session_id.cpp  session_lifetime.cpp  session_manager.cpp  test_runner.cpp  utils.cpp  utils.h
nsis-ka/natfw-nslp/testbed/: rsync-filter  setup_1.sh  setup_1.txt  setup_1_tb19.conf  setup_1_tb21.conf  setup_1a_tb20.conf  setup_1b_tb20.conf  setup_1c_tb20.conf  setup_2.sh  setup_2.txt  setup_2_tb19.conf  setup_2_tb22.conf  setup_2a_tb20.conf  setup_2a_tb21.conf  setup_2b_tb21.conf  setup_clear.sh
nsis-ka/ntlp/: Changelog  Doxygen.conf  GIST-KA-RELEASE  Makefile  Makefile.gmake  Makefile.in  README.src  config.status  configure  configure.ac  flush  gist  gist-debug  intercept  loadmodules  statistics.pl
nsis-ka/ntlp/docs/: NSIS-ka-architecture.ppt
nsis-ka/ntlp/include/: apimessage.h  apiwrapper.h  flowinfo.h  gist_conf.h  goettingen_api.h  goettingen_headers.h  mri.h  mri_est.h  mri_le.h  mri_pc.h  msghandle.h  network_notification_module.h  networking.group  nslpdata.h  ntlp_global_constants.h  ntlp_ie.h  ntlp_object.h  ntlp_starter.h  nwn_uds_msg.h  objectpool.h  poolobject.h  sessionid.h
nsis-ka/ntlp/scripts/: README  mkca  mkcert  root.cnf
nsis-ka/ntlp/src/: GISTConsole.cpp  GISTConsole.h  Makefile  Makefile.am  Makefile.gmake  Makefile.in  TODO  apimessage.cpp  apiwrapper.cpp  authorized_peer_db.h  capability.cpp  capability.h  flowinfo.cpp  general_objects.cpp  general_objects.h  gist_conf.cpp  gist_exceptions.cpp  gist_exceptions.h  headercomment-template.txt  intercept  network_notification_module.cpp  ntlp_global_constants.cpp  ntlp_main.cpp  ntlp_proto.cpp  ntlp_proto.h  ntlp_starter.cpp  ntlp_statemodule.h  ntlp_statemodule_api.cpp  ntlp_statemodule_data.cpp  ntlp_statemodule_main.cpp  ntlp_statemodule_querier.cpp  ntlp_statemodule_responder.cpp  nwnclient.cpp  routingentry.cpp  routingentry.h  routingtable.cpp  routingtable.h  secretmanager.cpp  secretmanager.h  signalingmodule_ntlp.cpp  (+1 more)
nsis-ka/ntlp/test/: Makefile  Makefile.am  Makefile.in  README  errorobject.cpp  mri_pc.cpp  responder_cookie.cpp  sessionid.cpp  test_flowinfo.cpp  test_mri_est.cpp  test_nattraversal.cpp  test_ntlp_pdu.cpp  test_runner.cpp  test_suite.cpp  test_suite.h  test_template.cpp
nsis-ka/ntlp/testing/: Interop-Coimbra-notes.txt  KA-testsuite  README.TESTING  config_tb1_addr  config_tb1_route  config_tb2_addr  config_tb2_route  config_tb3_addr  config_tb3_route  config_tb4_addr  config_tb4_route  more-scapy-packets  route_via_tb2  route_via_tb4  scapy.udp.wrong.magic  simpleinput.txt  testcases.txt  testsetup-uka
nsis-ka/protlib/: Makefile  Makefile.am  Makefile.in  Makefile.svn  README  config.h  config.h.in  config.status  configure  configure.ac
nsis-ka/protlib/fastqueue/: Makefile  Makefile.am  Makefile.in  eclock_gettime.c  fastqueue.c  fastqueue.h  testqueue.c
nsis-ka/protlib/include/: address.h  addresslist.h  assocdata.h  assocdata_uds.h  cleanuphandler.h  configfile.h  configpar.h  configpar_repository.h  configuration.h  connectionmap.h  connectionmap_uds.h  fqueue.h  hashmap  ie.h  llhashers.h  logfile.h  messages.h  network_message.h  protlib_types.h  protlibconf.h  queuemanager.h  radixtrie.h  readnl.h  rfc5014_hack.h  routing_util.h  setuid.h  test_util.h  threads.h  threadsafe_db.h  timer.h  timer_module.h  tlp_list.h  tp.h  tp_over_sctp.h  tp_over_tcp.h  tp_over_tls_tcp.h  tp_over_udp.h  tp_over_uds.h  tp_queryencap.h  tp_queryencap_nfq.h  (+1 more)
nsis-ka/protlib/src/: Makefile  Makefile.am  Makefile.in  address.cpp  addresslist.cpp  cmsghdr_util.cpp  cmsghdr_util.h  configfile.cpp  configpar.cpp  configpar_repository.cpp  configuration.cpp  connectionmap.cpp  connectionmap_uds.cpp  fqueue.cpp  ie.cpp  logfile.cpp  messages.cpp  network_message.cpp  protlib_types.cpp  protlibconf.cpp  queuemanager.cpp  readnl.cpp  timer.cpp  (+15 more)
nsis-ka/qos-nslp/: Makefile  Makefile.am  Makefile.gmake  Makefile.in  QOSNSLP-KA-RELEASE  README  config.status  configure  configure.ac
nsis-ka/qspec/: Makefile  Makefile.in  README  config.status  configure  configure.ac
nsis-ka/sessionauth/: Makefile  config.status  configure  configure.ac
nsis-ka/tools/: mkbranch  tag-release
(+563 files in other folders)
